2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/ann.html
+++ b/bat/ann.html
@@ -213,7 +213,8 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i> Pinned</a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                                Pinned</a>
                         </li>
 
                         <li>
@@ -228,6 +229,11 @@
                         <li>
                             <a href="ann.html" class="active"><i class="fa-solid fa-bullhorn"></i>
                                 Announcements</a>
+                        </li>
+
+                        <li>
+                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                                Settings</a>
                         </li>
                     </ul>
 
@@ -249,43 +255,46 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
-        <div class="list-group">
-            <a href="https://www.ptc.gov.sg/newsroom/news-releases/newsroom-view/fare-review-exercise-2025"
-                class="list-group-item list-group-item-action flex-column align-items-start">
-                <div class="d-flex">
-                    <div>
-                        <h5 class="lg-ann">Fare Review Exercise</h5>
-                        <small class="lg-date">14 Oct 2025</small>
+            <div class="alert alert-warning" role="alert">
+                A simple warning alert—check it out!
+            </div>
+            <div class="list-group">
+                <a href="https://www.ptc.gov.sg/newsroom/news-releases/newsroom-view/fare-review-exercise-2025"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Fare Review Exercise</h5>
+                            <small class="lg-date">14 Oct 2025</small>
+                        </div>
                     </div>
-                </div>
-                <p class="mb-1" style="cursor: pointer;">
-                    PTC grants overall fare adjustment of 5.0% - below the maximum allowable quantum of 14.4%;
-                    deferment of remaining quantum (9.4%) supported by additional Government subsidies...</p>
-            </a>
-            <a href="https://landtransportguru.net/ecid-ewl-closure-nov25/"
-                class="list-group-item list-group-item-action flex-column align-items-start">
-                <div class="d-flex">
-                    <div>
-                        <h5 class="lg-ann">Service Adjustments - EWL</h5>
-                        <small class="lg-date">03 Oct 2025</small>
+                    <p class="mb-1" style="cursor: pointer;">
+                        PTC grants overall fare adjustment of 5.0% - below the maximum allowable quantum of 14.4%;
+                        deferment of remaining quantum (9.4%) supported by additional Government subsidies...</p>
+                </a>
+                <a href="https://landtransportguru.net/ecid-ewl-closure-nov25/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - EWL</h5>
+                            <small class="lg-date">03 Oct 2025</small>
+                        </div>
                     </div>
-                </div>
-                <p class="mb-1">No Train Service will be available on the East-West Line (EWL) between Bedok –
-                    Tampines & Tanah Merah – Expo from Saturday, 29 November 2025 to Monday, 8 December 2025.</p>
-            </a>
-            <a href="https://landtransportguru.net/shortened-ops-hours-ccl-sep-dec-2025/"
-                class="list-group-item list-group-item-action flex-column align-items-start">
-                <div class="d-flex">
-                    <div>
-                        <h5 class="lg-ann">Service Adjustments - CCL</h5>
-                        <small class="lg-date">12 Aug 2025</small>
+                    <p class="mb-1">No Train Service will be available on the East-West Line (EWL) between Bedok –
+                        Tampines & Tanah Merah – Expo from Saturday, 29 November 2025 to Monday, 8 December 2025.</p>
+                </a>
+                <a href="https://landtransportguru.net/shortened-ops-hours-ccl-sep-dec-2025/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - CCL</h5>
+                            <small class="lg-date">12 Aug 2025</small>
+                        </div>
                     </div>
-                </div>
-                <p class="mb-1">Early Closures & Late Openings (ECLO) along the entire Circle Line (CCL), between
-                    Dhoby Ghaut / Marina Bay and HarbourFront, will take place across 14 Fridays, Saturdays &
-                    Sundays between 5 September 2025 and 28 December 2025.</p>
-            </a>
-        </div>
+                    <p class="mb-1">Early Closures & Late Openings (ECLO) along the entire Circle Line (CCL), between
+                        Dhoby Ghaut / Marina Bay and HarbourFront, will take place across 14 Fridays, Saturdays &
+                        Sundays between 5 September 2025 and 28 December 2025.</p>
+                </a>
+            </div>
 
         </div>
     </section>
