--- a/bat/ann.html
+++ b/bat/ann.html
@@ -255,9 +255,9 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
-            <div class="alert alert-warning" role="alert">
+            <!-- <div class="alert alert-warning" role="alert">
                 A simple warning alert—check it out!
-            </div>
+            </div> -->
             <div class="list-group">
                 <a href="https://www.ptc.gov.sg/newsroom/news-releases/newsroom-view/fare-review-exercise-2025"
                     class="list-group-item list-group-item-action flex-column align-items-start">
