2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/buszy.html
+++ b/buszy.html
@@ -243,11 +243,11 @@
                     <p>Announcements</p>
                     <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <!-- <div class="card-bz card-ann">
-                    <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
+                <div class="card-bz card-ann">
+                    <img src="bat/assets/settings.png" alt="settings" class="card-icon" />
                     <p>Settings</p>
                     <a href="bat/settings.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
