--- a/bat/settings.html
+++ b/bat/settings.html
@@ -415,7 +415,13 @@
                 }
             });
         });
+
+        // Refresh the active tab when the back button is pressed
+        window.addEventListener('popstate', () => {
+            location.reload();
+        });
     </script>
+
 
 
 </body>
