--- a/bat/ann.html
+++ b/bat/ann.html
@@ -383,9 +383,11 @@
         // Call the function to fetch train service alerts
         fetchTrainServiceAlerts();
 
-        // Refresh the active tab when the back button is pressed
-        window.addEventListener('popstate', () => {
-            location.reload();
+        // Handle the back button
+        window.addEventListener('popstate', (event) => {
+            if (event.state && event.state.tab) {
+                location.reload(); // Reload the page or handle the tab change
+            }
         });
     </script>
 </body>
