--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -452,12 +452,16 @@
                 }
             }
         });
-        
-        // Refresh the active tab when the back button is pressed
-        window.addEventListener('popstate', () => {
-            location.reload();
-        });
 
+        // Update the browser history state when navigating tabs
+        history.replaceState({ tab: 'activeTab' }, '', location.href);
+
+        // Handle the back button
+        window.addEventListener('popstate', (event) => {
+            if (event.state && event.state.tab) {
+                location.reload(); // Reload the page or handle the tab change
+            }
+        });
     </script>
 </body>
 
