--- a/bat/art.html
+++ b/bat/art.html
@@ -321,7 +321,7 @@
 
     <script src="../js/navtabs.js"></script>
 
-    <script src="buszy.js"></script>
+    <script src="buszy-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
