--- a/bat/settings.html
+++ b/bat/settings.html
@@ -353,7 +353,7 @@
 
     <script src="../js/navtabs.js"></script>
 
-    <script src="buszy.js"></script>
+    <script src="buszy-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
