--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                         data-year="2025">
                         <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/kSHiKjW.png" alt>
+                            <img src="https://i.imgur.com/9zxAL3F.png" alt>
                             <div class="hover-content-blog">
                                 <h4>Buszy - Bus Arrival Timings</h4>
                                 <a class="info" href="buszy.html" class="portfolio-img"><i
