--- a/buszy.html
+++ b/buszy.html
@@ -350,13 +350,21 @@
                     removeButton.addEventListener('click', (event) => {
                         event.stopPropagation(); // Prevent the click from triggering the link
                         event.preventDefault(); // Prevent default link behavior
-                        removeBookmark(busStop.BusStopCode);
+                        confirmAndRemoveBookmark(busStop.BusStopCode);
                     });
 
                     listItem.appendChild(link);
                     listItem.appendChild(removeButton);
                     bookmarksContainer.appendChild(listItem);
                 });
+            }
+
+            // Function to confirm and remove a bookmark
+            function confirmAndRemoveBookmark(busStopCode) {
+                const confirmation = confirm('Are you sure you want to unpin this bus stop?');
+                if (confirmation) {
+                    removeBookmark(busStopCode);
+                }
             }
 
             // Function to remove a bookmark
