--- a/bat/ann.html
+++ b/bat/ann.html
@@ -259,6 +259,19 @@
                 <i class="fa-solid fa-bullhorn"></i> Loading train service alerts...
             </div>
             <div class="list-group">
+                <a href="https://landtransportguru.net/ccl-degraded-service-jan-apr-26/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - CCL</h5>
+                            <small class="lg-date">01 Dec 2025</small>
+                        </div>
+                    </div>
+                    <p class="mb-1" style="cursor: pointer;">
+                        Reduced train services along the entire Circle Line (CCL) will take place from Saturday 17
+                        January 2026 to Sunday 19 April 2026 to facilitate essential tunnel strengthening works between
+                        Mountbatten, Dakota and Paya Lebar stations.</p>
+                </a>
                 <a href="https://www.ptc.gov.sg/newsroom/news-releases/newsroom-view/fare-review-exercise-2025"
                     class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
